# pyalgo

./: README.md  pyproject.toml
tests/: test_version.py
